@startuml

interface Defensa {
    + int getCosto()
}

class Torre {
    - int costo
    - int tiempoDeConstruccion
    - Rango rango
    - int danio
    - Posicion posicion

    + Torre()
    + getCosto()
    + void setPosicion(Posicion posicion)
    + boolean operativa()
    + int atacar(Mapa mapa)
    + void jugarTurno(Mapa mapa, Jugador jugador)
}

class TorreBlanca {
    - int costo
    - int tiempoDeConstruccion
    - Rango rango
    - int danio
    - Posicion posicion

    + TorreBlanca()
}

class TorrePlateada {
    - int costo
    - int tiempoDeConstruccion
    - Rango rango
    - int danio
    - Posicion posicion

    + TorrePlateada()
}

class TrampaArenosa {
    - int costo
    - int tiempoDeFuncionamiento

    + TrampaArenosa()
    + int getCosto()
    + TrampaArenosa jugarTurno(List<Enemigo> enemigos)
}

Torre <|-- TorrePlateada
Torre <|-- TorreBlanca

Defensa <|.. Torre
Defensa <|.. TrampaArenosa

@enduml